--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<mysql-version>5.1.47</mysql-version>
         <mybatis-plus-generator-version>3.3.2</mybatis-plus-generator-version>
 		<veloctity-version>2.2</veloctity-version>
+		<jwt-version>0.7.0</jwt-version>
 	</properties>
 
 	<dependencies>
@@ -58,6 +59,11 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jwt-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
